--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^3.6.0",
     "geist": "^1.3.1",
     "next": "14.2.23",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
