--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^9.3.0",
     "@internationalized/date": "^3.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-checkbox": "^1.1.4",
@@ -31,6 +32,8 @@
     "@react-aria/datepicker": "^3.13.0",
     "@react-stately/datepicker": "^3.12.0",
     "@remixicon/react": "^4.6.0",
+    "@tanstack/match-sorter-utils": "^8.19.4",
+    "@tanstack/react-table": "^8.20.6",
     "@tremor/react": "^3.18.7",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -42,7 +45,10 @@
     "react-dom": "^18",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.2",
-    "tailwind-variants": "^0.3.1"
+    "tailwind-variants": "^0.3.1",
+    "tsx": "^4.19.3",
+    "use-debounce": "^10.0.4",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
