--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tremor/react": "^3.18.7",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "firebase": "^11.5.0",
     "geist": "^1.3.1",
     "next": "14.2.23",
     "next-themes": "^0.4.4",
